--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
         "symfonycasts/verify-email-bundle": "^1.16",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.8",
+        "twig/intl-extra": "^3.8",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.3"
     },
